# ArabicBot

./: .dockerignore  .gitignore  .replit  AI_FEATURES.md  BOT_ISSUE_SUMMARY.md  DASHBOARD_FIXES_EXPLAINED.md  DASHBOARD_FUTURES_UPDATE.md  DEPLOYMENT_FINAL_CHECKLIST.md  DEPLOYMENT_STEPS_FINAL.md  DEPLOYMENT_SUMMARY.md  DYNAMIC_STRATEGY_WEAVER.md  ENV_TEMPLATE.md  FUTURES_IMPLEMENTATION_README.md  FUTURES_TRADING_GUIDE.md  HOW_TO_VIEW_DASHBOARD.md  LOGIC_ERROR_FIX.md  MAIN_PY_INTEGRATION_PATCH.md  MOMENTUM_OPTIMIZATION.md  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_FIX.md  RAILWAY_HEALTHCHECK_FIX.md  README.md  SELL_ALL_FEATURE.md  SETUP_GUIDE.md  TELEGRAM_SETUP.md  UPLOAD_TO_RAILWAY.txt  ai_market_analyzer.py  binance_client.py  binance_derivatives_client.py  causal_inference.py  config.json  custom_momentum.py  db_manager.py  futures_integration_example.py  futures_risk_manager.py  gunicorn_config.py  indicator_performance.json  indicator_performance_tracker.py  logger_setup.py  (+18 more)
attached_assets/: Pasted---1763038138390_1763038138390.txt  Pasted---1763232462605_1763232462605.txt  Pasted---1763241749150_1763241749151.txt  Pasted--1-Custom-Momentum-Inde-1763225040985_1763225040985.txt  Pasted--1-Multi-Timeframe-Analysis--1763039262194_1763039262194.txt  Pasted--1-Plain-Text-Custom-Momentum-for-SOLUSDT-BUY-sig-1763235093799_1763235093800.txt  Pasted--24-7--1763238843829_1763238843830.txt  Pasted--24-7--1763243461705_1763243461706.txt  Pasted--24-7--1763246774294_1763246774295.txt  Pasted--24-7--1763251566312_1763251566313.txt  Pasted--24-7--1763252404661_1763252404661.txt  (+14 more)
(+8 files in other folders)
